samples/_failures_safe/1761163982_bef4a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_183ba49f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_183ba49f.c:181:5: error: expected declaration or statement at end of input
  181 |     }
      |     ^
